# tgi_hack_cpg_24

./: LICENSE  README.md  pyproject.toml
charts/helm-text-embeddings-inference-0.1.7/: Chart.yaml  values.yaml
charts/helm-text-embeddings-inference-0.1.7/templates/: deployment.yaml
charts/helm-tgi/: Chart.yaml  values.yaml
charts/helm-tgi/templates/: configmap.yaml  deployment.yaml  horizontal-pod-autoscaler.yaml  service.yaml  servicemonitor.yaml
plots/: coder_average_decode_time_per_token_vs_batch_size.py  coder_average_prefill_time_vs_batch_size.py  coder_decode_throughput_vs_batch_size.py  pyproject.toml
src/tgi_app/: app.py
tools/my_tool/: pyproject.toml
tools/nor_tool/: embeddings.py  main.py  ocr_summarizer.py  pyproject.toml  random_number.py
tools/ra_search/: app.py  pyproject.toml  riksarkivetsearchrecordstool.py
