[project]
name = "tgi_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.sources]
my_tool = { workspace = true }

[tool.uv.workspace]
members = ["tools/*"]
# exclude = ["tools/my_tool"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tgi_app"]

[tool.uv]
dev-dependencies = [
    "ruff >=0.6.2",
]

[tool.ruff]
line-length = 126
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["C901", "E741", "W605", "W191"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
